--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@ statement_4_runs_if_condition_is_false; }</code>
     <section class="main-section" id="Reference">
       <header>Reference</header>
       </article>
-<ul>
-<li><p>All the documentation in this page is taken from MDN</p></li>
+      <ul>
+        <li><p>All the documentation in this page is taken from <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank">MDN</a></p></li>
 
 </ul>
 </article>
